# research-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  research_platform_context.md
.context/: CLAUDE.md  research_platform_context.md
.context/CODEMAPS/: architecture.md  backend.md  dependencies.md  frontend.md
.reports/: codemap-diff.txt
agents/rag/: agent.py  agent_card.json  main.py  mcp_client.py
agents/summariser/: agent.py  agent_card.json  main.py  mcp_client.py
agents/web_research/: agent.py  agent_card.json  main.py  mcp_client.py
common/: tracing.py
common/tests/: test_tracing.py
docs/: rag_agent_explained.md
docs/CODEMAPS/: architecture.md  codemap-diff.txt  dependencies.md  mcp_tools.md
docs/plans/: 2026-03-21-file-reader-mcp-tool.md  2026-03-21-vector-db-mcp-tool.md
docs/specs/: 2026-03-21-file-reader-mcp-tool-design.md  2026-03-21-web-search-mcp-tool-design.md  2026-03-22-citation-checker-mcp-tool-design.md
evals/: DEMO.md  _client.py  dataset.json  dataset_loader.py  report.py  requirements.txt  run_evals.py
evals/evaluators/: _judge.py  citation_accuracy.py  faithfulness.py  relevance.py
evals/tests/: test_evaluators.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
mcp_tools/citation_checker/: main.py  pytest.ini  requirements.txt  server.py
mcp_tools/file_reader/: main.py  requirements.txt  server.py
orchestrator/: a2a_client.py  config.py  coordinator.py  graph.py  main.py  pytest.ini  requirements.txt  state.py
(+49 files in other folders)
