[project]
name = "research-platform"
version = "0.1.0"
description = "Multi-agent research platform with MCP tools, A2A agents, and LangSmith evals"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*A2AClient is deprecated.*:DeprecationWarning",
    "ignore:.*EXPERIMENTAL.*:UserWarning",
]
markers = [
    "integration: marks tests as integration tests (require live external services)",
]
testpaths = [
    "agents",
    "mcp_tools",
    "orchestrator",
    "evals",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
